--- a/index.html
+++ b/index.html
@@ -1,73 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Assignment 2 - CSS</title>
-        <link rel="stylesheet" href="css/styles.css">
-        </head>
-    <body>
-        <header>
-            <h1>Lucky</h1>
-            <h3>(feat. Colbie Caillat)</h3>
-            <h3>Jason Mraz</h3>
-        </header>
-        <main>
-            <section id="strophe1">
-                <p>Do you hear me<br>
-                I'm talking to you<br>
-                Across the water<br>
-                Across the deep blue ocean<br>
-                Under the open sky<br>
-                Oh my, baby I'm trying</p>
-            </section>
-            <section id="strophe2">
-                <p>Boy I hear you in my dreams<br>
-                I feel your whisper across the sea<br>
-                I keep you with me in my heart<br>
-                You make it easier when life gets hard</p>
-            </section>
-            <section id="chorus">
-                <p>Lucky I'm in love with my best friend<br>
-                Lucky to have been where I have been<br>
-                Lucky to be coming home again</p>
-            </section>
-            <section id="strophe3">
-                <p>They don't know how long it takes<br>
-                Waiting for a love like this<br>
-                Every time we say goodbye<br>
-                I wish we had one more kiss<br>
-                I'll wait for you, I promise you I will</p>
-            </section>
-            <section id="chorus">
-                <p>Lucky I'm in love with my best friend<br>
-                Lucky to have been where I have been<br>
-                Lucky to be coming home again<br>
-                Lucky we're in love in every way<br>
-                Lucky to have stayed where we have stayed<br>
-                Lucky to be coming home someday</p>
-            </section>
-            <section id="strophe4">
-                <p>And so I'm sailing through the sea<br>
-                To an island where we'll meet<br>
-                You'll hear the music fill the air<br>
-                I'll put a flower in your hair</p>
-            </section>
-            <section id="strophe5">
-                <p>Though the breezes through the trees<br>
-                Move so pretty, you're all I see<br>
-                As the world keeps spinning round<br>
-                You hold me right here right now</p>
-            </section>
-            <section id="chorus">
-                <p>Lucky I'm in love with my best friend<br>
-                Lucky to have been where I have been<br>
-                Lucky to be coming home again<br>
-                Lucky we're in love in every way<br>
-                Lucky to have stayed where we have stayed<br>
-                Lucky to be coming home someday</p>
-            </section>
-        </main>
-    </body>
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment 2 - How Sweet is This!</title>
+    <link rel="stylesheet" href="Styles/styles.css">
+</head>
+<body>
+    <main>
+        <h1>Dark Chocolate</h1>
+        <div>
+            <img src="img/Choc1.jpg" alt="Dark Chocolate">
+        </div>
+        <h3>Extremely tasty and more nutritious than other chocolates</h3>
+        <div>
+            <img src="img/PingosChoc.jpg" alt="Chocolate Dots">
+        </div>
+        <p>Dark chocolate is made with a mixture of cocoa mass, sugar, and usually a little lecithin (which helps keep the mixture homogeneous). The amount of sugar added is less than in milk chocolate, which results in a more intense and bitter flavor. The percentage of cocoa in semisweet chocolate can vary, but it is usually around 60 to 70%. Some chocolate manufacturers may also add vanilla or other flavors to enhance the taste.</p>
+        <div>
+            <img src="img/ChocolateDerretido.jpg" alt="Chocolate Bar">
+        </div>
+        <p>Dark chocolate is rich in minerals, such as iron, magnesium, and zinc. The cocoa in dark chocolate also contains antioxidants called flavonoids, which may provide several health benefits. Chocolate comes from cacao, a plant with high levels of minerals and antioxidants.</p>
+        <h3>Do you want to sweeten your day and have less problems with calories? Try the best! Try dark chocolate!</h3>
+    </main>
+    <footer>
+        <img src="img/LogoDarkChocolate.png" alt="Logo">
+        <p>Copyright © 2023 Dark Chocolate. All Rights Reserved.</p>
+        <p>Contact us</p>
+    </footer>
+    
+</body>
 </html>
